# systemd_dbus

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  setup.py
src/systemd_dbus/: __init__.py  manager.py
src/systemd_dbus/_native/: systemd_dbus.c
tests/: test_manager.py
tests/dbus/: test-bus.conf
